package com.wvl.negocio.entidades;

import java.util.List;

public class Owner {
  private List<Compra> compras;
}
